# steam-mcp

./: .env.example  .gitignore  .mcpbignore  CHANGELOG.md  CHANGES.md  LICENSE  PRIVACY.md  PUBLISHING.md  README.md  SECURITY.md  SKILL.md  manifest.json  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
scripts/: audit_tokens.py
steam_mcp/: __init__.py  server.py
tests/: test_steam_mcp.py
